--- a/src/app/shared/message-dialog/message-dialog.component.html
+++ b/src/app/shared/message-dialog/message-dialog.component.html
@@ -1,1 +1,5 @@
-<p>message-dialog works!</p>
+<h1 mat-dialog-title>Favorite Animal</h1>
+<div mat-dialog-content>
+  My favorite animal is:
+  ${{message}}
+</div>
