--- a/src/app/asset/asset-summary/asset-summary.component.html
+++ b/src/app/asset/asset-summary/asset-summary.component.html
@@ -1,1 +1,21 @@
-<p>asset-summary works!</p>
+<div class="container mat-elevation-z8">
+  <table mat-table [dataSource]="transactions" style="width: 100%">
+    <!-- Item Column -->
+    <ng-container matColumnDef="item">
+      <th mat-header-cell *matHeaderCellDef> Item </th>
+      <td mat-cell *matCellDef="let transaction"> {{transaction.item}} </td>
+      <td mat-footer-cell *matFooterCellDef> Total </td>
+    </ng-container>
+
+    <!-- Cost Column -->
+    <ng-container matColumnDef="cost">
+      <th mat-header-cell *matHeaderCellDef> Cost </th>
+      <td mat-cell *matCellDef="let transaction"> {{transaction.cost }} </td>
+      <td mat-footer-cell *matFooterCellDef> {{getTotalCost() }} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
+  </table>
+</div>
