--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,27 +1,12 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <span>My First App</span>
+    <span>Asset Management</span>
     <span class="example-fill-remaining-space"></span>
-    <span class="align-center"></span>
+    <span class="align-right"></span>
     <span class="example-spacer"></span>
-    <button mat-button>About</button>
-    <button mat-button>Contact</button>
-    <a href="login" mat-button>Login</a>
-    <button mat-icon-button [matMenuTriggerFor]="menu">
-      <mat-icon>more_vert</mat-icon>
-    </button>
-    <mat-menu #menu="matMenu">
-      <button mat-menu-item>
-        <mat-icon>dialpad</mat-icon>
-        <span>Redial</span>
-      </button>
-      <button mat-menu-item disabled>
-        <mat-icon>voicemail</mat-icon>
-        <span>Check voicemail</span>
-      </button>
-      <button mat-menu-item>
-        <mat-icon>notifications_off</mat-icon>
-        <span>Disable alerts</span>
-      </button>
-    </mat-menu>
+    <a href="asset/list" mat-button>Asset</a>
+    <a *ngIf="!isLogedIn; else logOut" href="login" mat-button>Login</a>
+    <ng-template #logOut>
+      <a (click)="logout()" mat-button>Logout</a>
+    </ng-template>
   </mat-toolbar-row>
