--- a/src/app/asset/asset-summary/asset-summary.component.html
+++ b/src/app/asset/asset-summary/asset-summary.component.html
@@ -1,21 +1,38 @@
 <div class="container mat-elevation-z8">
-  <table mat-table [dataSource]="transactions" style="width: 100%">
-    <!-- Item Column -->
-    <ng-container matColumnDef="item">
-      <th mat-header-cell *matHeaderCellDef> Item </th>
-      <td mat-cell *matCellDef="let transaction"> {{transaction.item}} </td>
-      <td mat-footer-cell *matFooterCellDef> Total </td>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="width: 100%">
+
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef> Status </th>
+      <td mat-cell *matCellDef="let element"> {{element.assetDetails.status}} </td>
     </ng-container>
 
-    <!-- Cost Column -->
-    <ng-container matColumnDef="cost">
-      <th mat-header-cell *matHeaderCellDef> Cost </th>
-      <td mat-cell *matCellDef="let transaction"> {{transaction.cost }} </td>
-      <td mat-footer-cell *matFooterCellDef> {{getTotalCost() }} </td>
+    <ng-container matColumnDef="model">
+      <th mat-header-cell *matHeaderCellDef> Model </th>
+      <td mat-cell *matCellDef="let element"> {{element.assetDetails.model}} </td>
     </ng-container>
+
+    <ng-container matColumnDef="ram4GB">
+      <th mat-header-cell *matHeaderCellDef> RAM 4GB </th>
+      <td mat-cell *matCellDef="let element"> {{element.assetDetails.ram4GB}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="ram8GB">
+      <th mat-header-cell *matHeaderCellDef> RAM 8GB </th>
+      <td mat-cell *matCellDef="let element"> {{element.assetDetails.ram8GB}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="ram16GB">
+      <th mat-header-cell *matHeaderCellDef> Total  </th>
+      <td mat-cell *matCellDef="let element"> {{element.assetDetails.total}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="total">
+      <th mat-header-cell *matHeaderCellDef> RAM 16GB </th>
+      <td mat-cell *matCellDef="let element"> {{element.assetDetails.ram16GB}} </td>
+    </ng-container>
+
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
   </table>
 </div>
