--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,42 @@
-<mat-toolbar color="primary">
-  <mat-toolbar-row>
-    <span>Asset Management</span>
-    <span class="example-fill-remaining-space"></span>
-    <span class="align-right"></span>
-    <span class="example-spacer"></span>
-    <a href="asset/list" mat-button>Asset</a>
-    <a *ngIf="!isLogedIn; else logOut" href="login" mat-button>Login</a>
-    <ng-template #logOut>
-      <a (click)="logout()" mat-button>Logout</a>
-    </ng-template>
-  </mat-toolbar-row>
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark indigo">
+
+  <mdb-navbar-brand><a class="navbar-brand" href="">Asset Management</a></mdb-navbar-brand>
+  <links>
+    <ul class="navbar-nav mr-auto">
+      <!-- Asset Dropdown -->
+      <li class="nav-item dropdown" dropdown>
+        <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
+          Assets<span class="caret"></span></a>
+        <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+          <a class="dropdown-item waves-light" mdbWavesEffect href="/asset/create">Add Entry</a>
+          <a class="dropdown-item waves-light" mdbWavesEffect href="/asset/summary">Summary</a>
+          <a class="dropdown-item waves-light" mdbWavesEffect href="/asset/list">Details</a>
+        </div>
+      </li>
+
+      <!-- Asset Reports -->
+      <li class="nav-item dropdown" dropdown>
+        <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
+          Reports<span class="caret"></span></a>
+        <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+          <a class="dropdown-item waves-light" mdbWavesEffect href="/asset/create">Export to Excel</a>
+        </div>
+      </li>
+
+      <!-- Dropdown -->
+      <li class="nav-item dropdown" dropdown>
+        <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
+          {{'Welcome User'}}<span class="caret"></span></a>
+        <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+          <a class="dropdown-item waves-light" mdbWavesEffect href="#">Profile</a>
+          <div class="divider dropdown-divider"></div>
+          <a class="dropdown-item waves-light" mdbWavesEffect *ngIf="!isLogedIn; else logOut" href="login">Login</a>
+          <ng-template #logOut>
+            <a class="dropdown-item waves-light" mdbWavesEffect (click)="logout()">Logout</a>
+          </ng-template>
+        </div>
+      </li>
+
+    </ul>
+  </links>
+</mdb-navbar>
