--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-  <div class="4"></div>
-  <div class="4">
+  <div class="col-md-4"></div>
+  <div class="col-md-4">
     <mat-card class="example-card">
       <mat-card-header>
         <mat-card-title>Login</mat-card-title>
@@ -42,5 +42,5 @@
       </mat-card-content>
     </mat-card>
   </div>
-  <div class="4"></div>
+  <div class="col-md-"></div>
 </div>
