--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -26,7 +26,7 @@
       <!-- Dropdown User Logout-->
       <li class="nav-item dropdown" dropdown>
         <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-          {{'User Action'}}<span class="caret"></span></a>
+          <fa name="user"></fa> <span class="caret"></span></a>
         <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
 
           <a class="dropdown-item waves-light" mdbWavesEffect *ngIf="!isLogedIn; else logOut" href="login">Login</a>
