Remark and date of returned implementation added

--- a/src/app/asset/asset-entry/asset-entry.component.html
+++ b/src/app/asset/asset-entry/asset-entry.component.html
@@ -14,19 +14,16 @@
             <td> <!-- Employee Details-->
               <mat-form-field class="full-width">
                 <input matInput type="text" placeholder="Employee Id" formControlName="empId" id="empId">
-                <!--          <mat-error *ngIf="hasError('empId', 'required')">Name is required</mat-error>-->
               </mat-form-field>
             </td>
             <td>
               <mat-form-field class="full-width">
                 <input matInput type="text" placeholder="First Name" formControlName="firstName" id="firstName">
-                <!--          <mat-error *ngIf="hasError('firstName', 'required')">firstName is required</mat-error>-->
               </mat-form-field>
             </td>
             <td>
               <mat-form-field class="full-width">
                 <input matInput type="text" placeholder="Last Name" formControlName="lastName" id="lastName">
-                <!--          <mat-error *ngIf="hasError('lastName', 'required')">firstName is required</mat-error>-->
               </mat-form-field>
             </td>
           </tr>
@@ -37,14 +34,12 @@
             <td> <!-- Employee Details-->
               <mat-form-field class="full-width">
                 <input matInput type="text" placeholder="Location" formControlName="location" id="location">
-                <!--          <mat-error *ngIf="hasError('location', 'required')">firstName is required</mat-error>-->
               </mat-form-field>
 
             </td>
             <td>
               <mat-form-field class="full-width">
                 <input matInput type="text" placeholder="Cost Center" formControlName="costCenter" id="costCenter">
-                <!--          <mat-error *ngIf="hasError('costCenter', 'required')">firstName is required</mat-error>-->
               </mat-form-field>
             </td>
           </tr>
@@ -55,13 +50,11 @@
             <td> <!-- Employee Details-->
               <mat-form-field class="full-width">
                 <input matInput type="text" placeholder="Product Line" formControlName="productLine" id="productLine">
-                <!--          <mat-error *ngIf="hasError('productLine', 'required')">firstName is required</mat-error>-->
               </mat-form-field>
             </td>
             <td>
               <mat-form-field class="full-width">
                 <input matInput type="text" placeholder="Job Role" formControlName="jobRole" id="jobRole">
-                <!--          <mat-error *ngIf="hasError('jobRole', 'required')">firstName is required</mat-error>-->
               </mat-form-field>
             </td>
           </tr>
@@ -72,7 +65,6 @@
             <td> <!-- Employee Details-->
               <mat-form-field class="full-width">
                 <input matInput type="text" placeholder="Technology" formControlName="technology" id="technology">
-                <!--          <mat-error *ngIf="hasError('technology', 'required')">firstName is required</mat-error>-->
               </mat-form-field>
 
             </td>
@@ -80,7 +72,7 @@
               <!-- Asset Details -->
               <mat-form-field class="full-width">
                 <input matInput type="text" placeholder="Model" formControlName="model" id="model">
-                <!--          <mat-error *ngIf="hasError('model', 'required')">firstName is required</mat-error>-->
+                <mat-error *ngIf="hasError('model', 'required')">model is required</mat-error>
               </mat-form-field>
             </td>
           </tr>
@@ -91,12 +83,14 @@
             <td> <!-- Asset Details -->
               <mat-form-field class="full-width">
                 <input matInput type="text" placeholder="RAM" formControlName="ram" id="ram">
-                <!--          <mat-error *ngIf="hasError('ram', 'required')">firstName is required</mat-error>-->
-              </mat-form-field></td>
+                <mat-error *ngIf="hasError('ram', 'required')">ram is required</mat-error>
+              </mat-form-field>
+            </td>
             <td> <!-- Employee Details-->
               <mat-form-field class="full-width">
-                <input matInput type="text" placeholder="Serial Number" formControlName="serialNumber" id="serialNumber">
-                <!--          <mat-error *ngIf="hasError('serialNumber', 'required')">firstName is required</mat-error>-->
+                <input matInput type="text" placeholder="Serial Number" formControlName="serialNumber"
+                       id="serialNumber">
+                <mat-error *ngIf="hasError('serialNumber', 'required')">serialNumber is required</mat-error>
               </mat-form-field>
 
             </td>
@@ -104,7 +98,7 @@
 
               <mat-form-field class="full-width">
                 <input matInput type="text" placeholder="Asset Tag" formControlName="assetTag" id="assetTag">
-                <!--          <mat-error *ngIf="hasError('assetTag', 'required')">firstName is required</mat-error>-->
+                <mat-error *ngIf="hasError('assetTag', 'required')">assetTag is required</mat-error>
               </mat-form-field>
             </td>
           </tr>
@@ -112,7 +106,21 @@
 
         <table class="full-width" cellspacing="0">
           <tr>
-            <td> <!-- Employee Details-->
+            <td>
+              <mat-form-field class="full-width">
+                <mat-label>Status</mat-label>
+                <mat-select [(value)]="selectedStatus" (selectionChange)="setVisibilityForDate($event)"
+                            formControlName="status"
+                            id="status">
+                  <mat-option value="Allocated">Allocated</mat-option>
+                  <mat-option value="Inventory">Inventory</mat-option>
+                  <mat-option value="Inventory - not working">Inventory - not working</mat-option>
+                </mat-select>
+                <mat-error *ngIf="hasError('status', 'required')">status is required</mat-error>
+              </mat-form-field>
+            </td>
+
+            <td *ngIf="isAllocationDateVisible; else dateOfReturn"> <!-- Employee Details-->
               <mat-form-field class="full-width">
                 <input matInput [matDatepicker]="picker" placeholder="Date Allocated" formControlName="dateAllocated"
                        id="dateAllocated"
@@ -122,36 +130,41 @@
               </mat-form-field>
             </td>
             <td>
-              <mat-form-field class="full-width">
-                <input matInput type="text" placeholder="Hostname" formControlName="hostname" id="hostname">
-                <!--          <mat-error *ngIf="hasError('hostname', 'required')">firstName is required</mat-error>-->
-              </mat-form-field>
+              <ng-template #dateOfReturn>
+                <mat-form-field class="full-width">
+                  <input matInput [matDatepicker]="picker" placeholder="Date of Return" formControlName="dateOfReturn"
+                         id="dateOfReturn"
+                         readonly (click)="picker.open()">
+                  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                  <mat-datepicker #picker></mat-datepicker>
+                </mat-form-field>
+              </ng-template>
             </td>
 
-            <td><mat-form-field class="full-width">
-              <!--          <input matInput type="text" placeholder="Status" formControlName="status" id="status">-->
-              <!--          <mat-error *ngIf="hasError('hostname', 'required')">firstName is required</mat-error>-->
 
-              <mat-label>Status</mat-label>
-              <mat-select formControlName="status" id="status">
-                <mat-option value="Allocated">Allocated</mat-option>
-                <mat-option value="Inventory">Inventory</mat-option>
-                <mat-option value="Inventory - not working">Inventory - not working</mat-option>
-              </mat-select>
-            </mat-form-field></td>
+            <td>
+              <mat-form-field class="full-width">
+                <input matInput type="text" placeholder="Hostname" formControlName="hostname" id="hostname">
+              </mat-form-field>
+            </td>
           </tr>
         </table>
 
-
-
-
-
-
+        <table class="full-width" cellspacing="0">
+          <tr>
+            <td>
+              <!-- Asset Details -->
+              <mat-form-field class="full-width">
+                <input matInput type="text" placeholder="Remark" formControlName="remark" id="remark">
+                <mat-error *ngIf="hasError('model', 'required')">firstName is required</mat-error>
+              </mat-form-field>
+            </td>
+          </tr>
+        </table>
 
       </mat-card-content>
       <mat-card-actions align="center">
         <button mat-raised-button color="primary" [disabled]="!assetForm.valid">Create</button>
-        <!--        <button type="button" mat-raised-button color="warn" (click)="onCancel()">Cancel</button>-->
       </mat-card-actions>
     </form>
   </mat-card>
