--- a/src/app/asset/asset-summary/asset-summary.component.html
+++ b/src/app/asset/asset-summary/asset-summary.component.html
@@ -1,10 +1,11 @@
 <div class="container mat-elevation-z8">
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="width: 100%">
 
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef> Status </th>
-      <td mat-cell *matCellDef="let element"> {{element.assetDetails.status}} </td>
-    </ng-container>
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef> Status </th>
+        <td rowspan="2" mat-cell *matCellDef="let element; let i = index" [attr.rowspan]="getRowSpan('status', i)"
+            [style.display]="getRowSpan('status', i) ? '' : 'none'"> {{element.assetDetails.status}} </td>
+      </ng-container>
 
     <ng-container matColumnDef="model">
       <th mat-header-cell *matHeaderCellDef> Model </th>
