Remove Asset/Filter by Status/Unused components removed

--- a/src/app/asset/asset-list/asset-list.component.scss
+++ b/src/app/asset/asset-list/asset-list.component.scss
@@ -5,3 +5,14 @@ table {
 mat-form-field {
   width: 100%;
 }
+
+th{
+  background-color: #8ed49e;
+}
+.action-icon{
+  margin-left: 10px;
+}
+
+.action-icon:hover{
+  cursor: pointer;
+}
