--- a/src/app/asset/asset-list/asset-list.component.html
+++ b/src/app/asset/asset-list/asset-list.component.html
@@ -1,29 +1,45 @@
 <!--<button (click)="exportToExcel()" mat-flat-button color="primary" >Export As Excel</button> <br><br>-->
 <div class="container">
-  <mat-form-field>
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-  </mat-form-field>
+  <table>
+    <tr>
+      <td>
+        <mat-form-field>
+            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter i.e. Serial No/Asset Tag/Hostname">
+        </mat-form-field>
+      </td>
+      <td>
+        <mat-form-field>
+          <mat-label>Asset Status</mat-label>
+          <mat-select (selectionChange)="applyFilter($event.value)">
+            <mat-option *ngFor="let status of statuses" [value]="status">
+              {{status}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </td>
+    </tr>
+  </table>
 </div>
-  <table mat-table [dataSource]="dataSource" matSort  class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z18">
 
-    <ng-container matColumnDef="sNo">
-      <th mat-header-cell *matHeaderCellDef> SNo.</th>
+    <!--<ng-container matColumnDef="sNo">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> sNo</th>
       <td mat-cell *matCellDef="let element"> {{element.sno}} </td>
-    </ng-container>
+    </ng-container>-->
 
     <!-- Name Column -->
     <ng-container matColumnDef="empId">
-      <th mat-header-cell *matHeaderCellDef> empId</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> empId</th>
       <td mat-cell *matCellDef="let element"> {{element.employee.empId}} </td>
     </ng-container>
 
     <!-- Weight Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name</th>
       <td mat-cell *matCellDef="let element"> {{element.employee.firstName}} {{element.employee.lastName}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="location">
+    <!--<ng-container matColumnDef="location">
       <th mat-header-cell *matHeaderCellDef> Location</th>
       <td mat-cell *matCellDef="let element"> {{element.employee.location}} </td>
     </ng-container>
@@ -37,17 +53,17 @@
     <ng-container matColumnDef="productLine">
       <th mat-header-cell *matHeaderCellDef> Product Line</th>
       <td mat-cell *matCellDef="let element"> {{element.employee.productLine}} </td>
-    </ng-container>
+    </ng-container>-->
 
     <ng-container matColumnDef="jobRole">
       <th mat-header-cell *matHeaderCellDef> Job Role</th>
       <td mat-cell *matCellDef="let element"> {{element.employee.jobRole}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="technology">
+    <!--<ng-container matColumnDef="technology">
       <th mat-header-cell *matHeaderCellDef> Technology</th>
       <td mat-cell *matCellDef="let element"> {{element.employee.technology}} </td>
-    </ng-container>
+    </ng-container>-->
 
     <ng-container matColumnDef="ram">
       <th mat-header-cell *matHeaderCellDef> RAM (in GB)</th>
@@ -55,7 +71,7 @@
     </ng-container>
 
     <ng-container matColumnDef="model">
-      <th mat-header-cell *matHeaderCellDef> Model</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Model</th>
       <td mat-cell *matCellDef="let element"> {{element.model}} </td>
     </ng-container>
 
@@ -65,17 +81,17 @@
     </ng-container>
 
     <ng-container matColumnDef="assetTag">
-      <th mat-header-cell *matHeaderCellDef> Asset Tag</th>
+      <th mat-header-cell *matHeaderCellDef  mat-sort-header> Asset Tag</th>
       <td mat-cell *matCellDef="let element"> {{element.assetTag}} </td>
     </ng-container>
 
     <ng-container matColumnDef="dateAllocated">
-      <th mat-header-cell *matHeaderCellDef> Date Allocated</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Date Allocated</th>
       <td mat-cell *matCellDef="let element"> {{element.dateAllocated | date : 'dd/MM/yyyy'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="dateOfReturned">
-      <th mat-header-cell *matHeaderCellDef> Date of Returned</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Date of Returned</th>
       <td mat-cell *matCellDef="let element"> {{element.dateReturned | date : 'dd/MM/yyyy'}} </td>
     </ng-container>
 
@@ -85,7 +101,7 @@
     </ng-container>
 
     <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef> Status</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Status</th>
       <td mat-cell *matCellDef="let element"> {{element.status}} </td>
     </ng-container>
 
@@ -93,10 +109,13 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> Action</th>
       <td mat-cell *matCellDef="let element">
-        <button mat-button>Action</button>
+        <i class="action-icon fa fa-edit" (click)="openDialog(element)"></i>
+        <i class="action-icon fa fa-trash" (click)="deleteElement(element.sno)"></i>
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+
+<mat-paginator [pageSizeOptions]="[10, 25, 100, 200]"></mat-paginator>
