--- a/src/app/asset/asset-summary/asset-summary.component.html
+++ b/src/app/asset/asset-summary/asset-summary.component.html
@@ -1,5 +1,4 @@
-<div class="container mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="width: 100%">
+  <table mat-table [dataSource]="dataSource" class="container mat-elevation-z8" style="width: 100%">
 
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef> Status </th>
@@ -36,4 +35,3 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-</div>
