--- a/src/app/asset/asset-list/asset-list.component.html
+++ b/src/app/asset/asset-list/asset-list.component.html
@@ -22,10 +22,10 @@
 </div>
   <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z18">
 
-    <!--<ng-container matColumnDef="sNo">
+    <ng-container matColumnDef="sNo">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> sNo</th>
       <td mat-cell *matCellDef="let element"> {{element.sno}} </td>
-    </ng-container>-->
+    </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="empId">
@@ -109,8 +109,10 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> Action</th>
       <td mat-cell *matCellDef="let element">
-        <i class="action-icon fa fa-edit" (click)="openDialog(element)"></i>
-        <i class="action-icon fa fa-trash" (click)="deleteElement(element.sno)"></i>
+        <i class="action-icon fa fa-edit" (click)="editRecord(element)"></i>
+<!--        <i class="action-icon fa fa-trash" (click)="deleteElement(element.sno)"></i>-->
+        <i class="action-icon fa fa-trash" (click)="deleteRecord(element.sno)"></i>
+
       </td>
     </ng-container>
 
